<resources>
    <string name="app_name">The Critics View</string>

    <string name="com.twitter.sdk.android.CONSUMER_KEY">gaQqMfCx1AuDM10gthgEd2Qzp</string>
    <string name="com.twitter.sdk.android.CONSUMER_SECRET">940pKQTrJKTwd5kU8Dax9cKQJnc8NTgVNGR45trl7emRqvRbK0</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="thank_you">Thank you for your review \n Please enjoy this</string>
    <string name="note">NOTE: Each coupon number is different</string>
    <string name="off_final">Off Final Bill with \n Purchase over \n $50</string>
    <string name="badge_top">Critics will receive the below offer after submitting a review</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="GPSAlertDialogTitle">DialogTitle</string>
    <string name="GPSAlertDialogMessage">Enable Location</string>
    <string name="cancel">Cancel</string>
    <string name="facebook_app_id">136466263825988</string>
    <string name="invite_text">Inviting Critics to Your Restaurants can be a great way to improve your Critics Score,
    let your community know you are improving and help you to make new Customers.</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="invite_text_two">The Unique "Invite Critics" feature of this app will allow you to reach out
        you to all users in your area at once. This will bring dozens or Hundreds of Restaurant Food Critics to your Tables
        .</string>
    <string name="invite_text_three">Before You can send out an invite you must setup the invite. Offer Critics as discount
    Coupon or a free desert for Presenting their Critic Review of Your Restaurant</string>

    <string name="coupon_text_upper">Invite Critics to come and review your restaurant with one of the offers below.</string>
    <string name="coupon_text_lower">Upon completion of a review the Critic will receive a coupon that they can redeem.</string>

    <string-array name="restaurant_categories">
        <item>Restaurant</item>
        <item>Cafe</item>
        <item>Fast Food</item>
    </string-array>

    <string name="rank_1">No Rank</string>
    <string name="rank_2">Low Rank</string>
    <string name="rank_3">Medium Rank</string>
    <string name="rank_4">Average Rank</string>
    <string name="rank_5">B-list Rank</string>
    <string name="rank_6">A-list Rank</string>
    <string name="rank_7">Elite Rank</string>

    <string name="style_json">
  [
    {
      \"featureType\": \"poi.business\",
      \"elementType\": \"all\",
      \"stylers\": [
        {
          \"visibility\": \"off\"
        }
      ]
    },
    {
      \"featureType\": \"transit\",
      \"elementType\": \"labels.icon\",
      \"stylers\": [
        {
          \"visibility\": \"off\"
        }
      ]
    }
  ]
  </string>

</resources>
