<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Send Invites To"
        android:layout_marginTop="15dp"
        android:textColor="@color/app_basic_color"
        android:textSize="18dp"
        android:textAlignment="center"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/sendInvites_rg"
                android:layout_margin="15dp"
                android:orientation="vertical">


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/all_rb"
                    android:checked="true"
                    android:text="All"/>


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/onestar_rb"
                    android:text="@string/rank_1"/>


                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/twostar_rb"
                    android:text="@string/rank_2"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/threestar_rb"
                    android:text="@string/rank_3"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fourstar_rb"
                    android:text="@string/rank_4"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fivestar_rb"
                    android:text="@string/rank_5"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sixstar_rb"
                    android:text="@string/rank_6"/>

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sevenstar_rb"
                    android:text="@string/rank_7"/>

            </RadioGroup>

        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.6"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="52dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

            </LinearLayout>



            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>


                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:src="@drawable/star_icon"
                    android:tint="@color/app_basic_color"/>
            </LinearLayout>
        </LinearLayout>
        -->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/app_basic_color"
            android:text="Send"
            android:layout_marginRight="5dp"
            android:textColor="@color/white"
            android:id="@+id/send_btn"
            android:layout_weight="0.5"/>

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/com_facebook_button_background_color_disabled"
            android:text="Cancel"
            android:layout_marginLeft="5dp"
            android:id="@+id/cancel_btn"
            android:layout_weight="0.5"/>

    </LinearLayout>

</LinearLayout>
