<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="inv.sfs.com.criticapp.badgeDetails"
    android:orientation="vertical">


    <ScrollView android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/app_basic_color">

            <include layout="@layout/promotion_item"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:id="@+id/admin_note_lay"
                android:layout_margin="10dp">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/badge_top"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:textSize="16dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/note"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/coupon_bg">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="80dp"
                    android:text="@string/thank_you"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <TextView
                    android:id="@+id/discountText_middle_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="42dp"
                    android:layout_marginLeft="42dp"
                    android:layout_marginTop="10dp"
                    android:text="10%"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="45dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="50dp"
                    android:layout_marginRight="50dp"
                    android:textSize="20dp"
                    android:textAlignment="center"
                    android:id="@+id/promotionText_middle_tv"
                    android:textColor="@color/white"
                    android:text="This is very large text wwith drinks you can take off"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="60dp"
                    android:layout_marginRight="60dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/btn_white_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:id="@+id/expiryDate_tv"
                        android:text="Expires: Feb 28, 2018"
                        android:textSize="20dp"
                        android:textColor="@color/choco_color"
                        android:textAlignment="center"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="140dp"
                    android:layout_marginRight="140dp"
                    android:layout_marginTop="40dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:gravity="center_vertical|center_horizontal"
                    android:background="@drawable/btn_white_small">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/coupon_code_tv"
                        android:layout_gravity="center_horizontal"
                        android:gravity="center_horizontal"
                        android:text="000001"
                        android:textSize="18dp"
                        android:textColor="@color/choco_color"
                        android:textAlignment="center"/>

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_brown"
                    android:text="Send Invites"
                    android:id="@+id/send_invite_btn"
                    android:textColor="@color/white"
                    android:textSize="20dp"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
